# pyvim

./: README.rst  help.py  pyproject.toml  setup.py
.github/workflows/: test.yml
examples/config/: pyvimrc
pyvim/: __main__.py  buffer.py  clipboard.py  completion.py  document.py  editor.py  editor_buffer.py  help.py  key_bindings.py  key_processor.py  layout.py  lexer.py  modeline.py  rc_file.py  reporting.py  style.py  utils.py  vi.py  welcome_message.py  window_arrangement.py  word_motion.py
pyvim/commands/: commands.py  completer.py  grammar.py  handler.py  lexer.py  preview.py
pyvim/entry_points/: run_pyvim.py
pyvim/io/: __init__.py  backends.py  base.py
tests/: conftest.py  test_expandtab.py  test_modeline.py  test_substitute.py  test_window_arrangements.py  test_word_motion.py
